--- a/src/components/common/aq-allpage-layout.html
+++ b/src/components/common/aq-allpage-layout.html
@@ -24,6 +24,7 @@
         paper-card {
         	width: 100%;
         	height: 100%;
+        	scroll-behavior: inherit;
         }
 
         #navigation-panel {
@@ -89,6 +90,7 @@
         	<div id="lower-container">
         		<content id="lower-button-content" select="footer-button, .footer-button"></content>
         	</div>
+
     	</div>
     	</template>
 	</template>
