--- a/src/components/common/backtest/aq-aggregatedreturns-barchart.html
+++ b/src/components/common/backtest/aq-aggregatedreturns-barchart.html
@@ -168,7 +168,12 @@
 		  				}, false
 	  				);	
 				}
+			},
 
+			redrawChart: function() {
+				//WHY the followig command doesn't work
+				//this.$$('#cumRetLineChart').redraw();
+				this.$$('#barChart')._chart.redraw();
 			},
 
 			resizeChart: function() {
