--- a/src/components/common/backtest/aq-backtest-performance-detail-item.html
+++ b/src/components/common/backtest/aq-backtest-performance-detail-item.html
@@ -107,7 +107,7 @@
                 }
 
                 var el = document.createElement('aq-cumret-linechart');
-                Polymer.dom(this.$.cumRetLineChartDiv).appendChild(el);
+                Polymer.dom(this.$$('#cumRetLineChartDiv')).appendChild(el);
 
                 Polymer.dom.flush();
 
