--- a/src/components/common/aq-code-comparison-element.html
+++ b/src/components/common/aq-code-comparison-element.html
@@ -1,5 +1,6 @@
 <link rel="import" href="../../../bower_components/iron-selector/iron-selector.html">
 <link rel="import" href="../../../bower_components/iron-pages/iron-pages.html">
+<link rel='import' href='../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html'>
 
 <link rel='import' href='./backtest/aq-backtest-metric-item.html'>
 
@@ -10,25 +11,24 @@
 
 <dom-module id="aq-code-comparison-element">
     
+    <style include="iron-flex iron-flex-alignment iron-positioning">
+    </style>
+
     <style>
-        :host {
-            display: block;
+        #editor-right, #editor-left {
+            height: 100%;
+            min-height: 450px;
         }
 
-        #flex-container>div {
-            position: relative;
-            flex-grow: 1;
-        }
-        
-        #flex-container>div#acediff-gutter {
+        #acediff-gutter {
             height: 45px;
             top:-15px;
-            width: 3px;
+            width: 10px;
             background-color: transparent;
         }
 
         .acediff-class {
-            position: relative !important;
+            --position: relative !important;
             width: 100%;
             height: 100%;
         }
@@ -38,7 +38,7 @@
             background-color: #5E35B1;
             border-top: 1px solid #5E35B1;
             border-bottom: 1px solid #5E35B1;
-            position: absolute;
+           --position: absolute;
             z-index: 4;
         }
         /*Positioning the gutter*/
@@ -58,76 +58,18 @@
             display: none;
         }
 
-        #flex-container {
-            display: inline-flex;
-            flex-direction: row;
-            position: relative;
-            width: var(--aq-code-comparison-element-width, 100%);
-            /* these 3 lines are to prevents an unsightly scrolling bounce affect on Safari */
-            height: var(--aq-code-comparison-element-height, 100%);
-            overflow: auto;
-            justify-content: center;
-            margin-top: 20px;
-        }
-
-        ul {
-            list-style: none;
-        }
-
-        .selected-backtest-left, .selected-backtest-right {
-            max-width: 300px;
-        }
-
-        .selected-backtest-left-li, .selected-backtest-right-li {
-            float: left;
-            /*border: 1px solid teal;*/
-            margin-bottom: 10px;
-            padding: 2px 10px;
-            margin-right: 10px;
-            border-radius: 2px;
-            cursor: pointer;
-            background-color: #f2f2f2;
-            height: 19px;
-            transition: all 0.2s ease-in-out;
-        }
-
-        .left-li-items, .right-li-items {
-            font-weight: 400;
-            font-size: 12px;
-        }
-
-        .flex-container-inside {
-            display: flex;
-            flex-direction: column;
-        }
-
-
-        .lower-container ul {
-            display: flex;
-            justify-content: space-between;
-            margin: 15px 0;
-            padding: 10px;
-            margin: 0 auto;
-            width: 500px;
-        }
-
-        ul {
-            padding: 0;
-            /*width: 300px;*/
-            max-height: 67px;
-            min-height: 57px;
-            margin: 0 auto;
-            overflow: hidden;
-            overflow-y: scroll;
+        .metric-container {
+            margin-bottom: 5px;
+            margin-top: 5px;
+            @apply(--layout-around-justified);
+            background-color: #f5f5f5;
+            padding-top: 5px;
+            padding-bottom: 5px;
         }
 
         aq-backtest-metric-item {
-            --aq-backtest-metric-item-text-label-font-size: 10px;
+            --aq-backtest-metric-item-text-label-font-size: 12px;
             --aq-backtest-metric-item-text-content-font-size: 12px;
-        }
-
-        .metric-item-li {
-            display: inline-table;
         }
 
         .hr-bar {
@@ -144,61 +86,88 @@
             background-color: #cc4444; 
         }
 
-        .iron-selected {
-            /*border: 1px solid teal;*/
-            background-color: teal;
-            color: #fff;
+        .metric-item {
+            --background: #fff;
+            --border: 1px solid #e1e1e1;
+            --padding: 5px ;
         }
-        .lower-container {
-            padding: 0 20px;
-            margin-top: 5px;
-            background-color: #f5f5f5;
-            border:none;
-            height: 60px;
+
+        .metric-value {
+            color: #3c3c3c;
+            font-size: 13px;
         }
+
+        .metric-name {
+            color: #3c3c3c;
+            font-size: 12px;
+        }
+
+        .code-container {
+            width: 575px;
+        }
+
+        iron-pages {
+            width: 100%;
+        }
+
+        paper-tabs {
+            height: 25px;
+            padding: 5px;
+        }
+       
+        paper-tab {
+            --paper-tab-content-unselected: {
+                background-color: #f5f5f5;
+                color: #3c3c3c;
+            };
+        }
+
+        paper-tab {
+            --paper-tab-content: {
+                background-color: teal;
+                padding: 5px;
+                color:white;
+            }
+        }
+
     </style>
+    
     <template>
-        <div id="flex-container">
-            <div class="flex-container-inside">
-                <ul class="selected-backtest-left center">
-                    <iron-selector id="leftSelector" selected="{{selectedLeft}}">
-                        <template is="dom-repeat" items="{{backtestIndexArray}}">
-                            <li class="selected-backtest-left-li">
-                                <span class="left-li-items">{{item}}</span>
-                            </li>
-                        </template>
-                    </iron-selector>
-                </ul>
-                <div class="hr-bar"></div>
+        <div class="layout horizontal wrap center-justified center">
+            <div class="layout vertical center code-container">
+                <paper-tabs noink no-bar id="leftSelector" selected="{{selectedLeft}}">
+                    <template is="dom-repeat" items="{{backtestIndexArray}}">
+                        <paper-tab>{{item}}</paper-tab>
+                    </template>
+                </paper-tabs>
+                
                 <iron-pages selected="{{selectedLeft}}">
                     <template is="dom-repeat" items="{{backtests}}">
-                        <div class="lower-container">
-                            <ul>
-                                <li class="metric-item-li">
-                                    <aq-backtest-metric-item
-                                            metric-name="Created"
-                                            metric-value="{{item.createdAt}}">
-                                    </aq-backtest-metric-item>
-                                </li>
-                                <li class="metric-item-li">
-                                    <aq-backtest-metric-item
-                                            metric-name="Time Period"
-                                            metric-value="[[formatDate(item.settings.startDate)]] - [[formatDate(item.settings.endDate)]]">
-                                    </aq-backtest-metric-item>
-                                </li>
-                                <li class="metric-item-li">
-                                    <aq-backtest-metric-item
-                                            metric-name="Total Return"
-                                            metric-value="{{item.output.summary.totalreturn}}%">
-                                    </aq-backtest-metric-item>
-                                </li>
-                                <li class="metric-item-li">
-                                    <aq-backtest-metric-item
-                                            metric-name="Sharpe Ratio"
-                                            metric-value="{{item.output.summary.sharperatio}}">
-                                    </aq-backtest-metric-item>
-                                </li>
-                            </ul>
+                        <div class="metric-container layout horizontal">
+                            <div class="metric-item">
+                                <div class="metric-value">[[item.createdAt]]
+                                </div>
+                                <div class="metric-name">Created</div>
+                            </div>
+
+                            <div class="metric-item">
+                                <div class="metric-value">[[formatDate(item.settings.startDate)]] - [[formatDate(item.settings.endDate)]]
+                                </div>
+                                <div class="metric-name">Time Period</div>
+                            </div>
+
+                            <div class="metric-item">
+                                <div class="metric-value">[[item.output.summary.totalreturn]]%
+                                </div>
+                                <div class="metric-name">Total Return</div>
+                            </div>
+
+                            <div class="metric-item">
+                                <div class="metric-value">{{item.output.summary.sharperatio}}%
+                                </div>
+                                <div class="metric-name">Sharpe Ratio</div>
+                            </div>
+                            
                         </div>
                     </template>
                 </iron-pages>
@@ -209,46 +178,41 @@
                 <!--div class="red-bar"></div-->
             </div>
 
-            <div class="flex-container-inside">
-                <ul class="selected-backtest-right">
-                    <iron-selector id="rightSelector" selected="{{selectedRight}}">
-                        <template is="dom-repeat" items="{{backtestIndexArray}}">
-                            <li class="selected-backtest-left-li">
-                                <span class="left-li-items">{{item}}</span>
-                            </li>
-                        </template>
-                    </iron-selector>
-                </ul>
-                <div class="hr-bar"></div>
+            <div class="layout vertical center code-container">
+                <paper-tabs noink no-bar id="rightSelector" selected="{{selectedRight}}">
+                    <template is="dom-repeat" items="{{backtestIndexArray}}">
+                        <paper-tab>{{item}}
+                        </paper-tab>
+                    </template>
+                </paper-tabs>
+                
                 <iron-pages selected="{{selectedRight}}">
                     <template is="dom-repeat" items="{{backtests}}">
-                        <div class="lower-container">
-                            <ul>
-                                <li>
-                                    <aq-backtest-metric-item
-                                            metric-name="Created"
-                                            metric-value="{{item.createdAt}}">
-                                    </aq-backtest-metric-item>
-                                </li>
-                                <li>
-                                    <aq-backtest-metric-item
-                                            metric-name="Time Period"
-                                            metric-value="[[formatDate(item.settings.startDate)]] - [[formatDate(item.settings.endDate)]]">
-                                    </aq-backtest-metric-item>
-                                </li>
-                                <li>
-                                    <aq-backtest-metric-item
-                                            metric-name="Total Return"
-                                            metric-value="{{item.output.summary.totalreturn}}%">
-                                    </aq-backtest-metric-item>
-                                </li>
-                                <li>
-                                    <aq-backtest-metric-item
-                                            metric-name="Sharpe Ratio"
-                                            metric-value="{{item.output.summary.sharperatio}}">
-                                    </aq-backtest-metric-item>
-                                </li>
-                            </ul>
+                        <div class="metric-container layout horizontal">
+                            <div class="metric-item">
+                                <div class="metric-value">[[item.createdAt]]
+                                </div>
+                                <div class="metric-name">Created</div>
+                            </div>
+
+                            <div class="metric-item">
+                                <div class="metric-value">[[formatDate(item.settings.startDate)]] - [[formatDate(item.settings.endDate)]]
+                                </div>
+                                <div class="metric-name">Time Period</div>
+                            </div>
+
+                            <div class="metric-item">
+                                <div class="metric-value">[[item.output.summary.totalreturn]]%
+                                </div>
+                                <div class="metric-name">Total Return</div>
+                            </div>
+
+                            <div class="metric-item">
+                                <div class="metric-value">{{item.output.summary.sharperatio}}%
+                                </div>
+                                <div class="metric-name">Sharpe Ratio</div>
+                            </div>
+                            
                         </div>
                     </template>
                 </iron-pages>
@@ -257,6 +221,7 @@
         </div>
 
     </template>
+    
     <script>
         Polymer({
             is: "aq-code-comparison-element",
@@ -303,8 +268,9 @@
                 var element = this;
                 var aceDiffer = this.getAceDiff();
                 this.editors = aceDiffer.getEditors();
-                this.backtests = this.compareItems.map(function(x){return x.backtest;}); 
-                this.backtestIndexArray = this.compareItems.map(function(x) {return x.index;});
+                this.backtests = this.compareItems.map(x => {return x.backtest;}); 
+
+                this.backtestIndexArray = this.compareItems.map(x => {return x.index;});
 
                 for (var i = 0; i < this.backtests.length; i++) {
                     this.backtests[i].createdAt = date.formatDateTime(this.backtests[i].createdAt);
@@ -377,7 +343,7 @@
             formatDate: function (dateVar) {
                 return date.formatDate(dateVar);
             },
-            
+
         });
 
     </script>
